   detects that an incoming SIP request crossed a NAT after being sent by
   the remote endpoint.
 * Adds an option send_diversion which can be disabled to prevent
   diversion headers from automatically being added to invites.

Chan_local changes
------------------
 * Added a manager event "LocalBridge" for local channel call bridges between
   the two pseudo-channels created.

Codec changes
-------------
 * Codec lists may now be modified by the '!' character, to allow succinct
   specification of a list of codecs allowed and disallowed, without the
   requirement to use two different keywords.  For example, to specify all
   codecs except g729 and g723, one need only specify allow=all,!g729,!g723.

Music On Hold Changes
---------------------
 * Added 'announcement' option which will play at the start of MOH and between
   songs in modes of MOH that can detect transitions between songs (eg.
   files, mp3, etc).

Queue changes
-------------
 * Added queue options autopausebusy and autopauseunavail for automatically
   pausing a queue member when their device reports busy or congestion.

Voicemail changes
-----------------
 * When voicemail plays a message's envelope with saycid set to yes, when reaching
   the caller id field it will play a recording of a file with the same base name
   as the sender's callerid if there is a similarly named file in
   <astspooldir>/recordings/callerids/

Applications
------------
 * Added 'j' option to SayUnixTime. SayUnixTime no longer auto jumps to extension
   when receiving DTMF.  Use the 'j' option to enable extension jumping. Also
   changed arguments to SayUnixTime so that every option is truly optional even
   when using multiple options (so that j option could be used without having to
   manually specify timezone and format) There are other beneftis eg. format can
   now be used without specifying time zone as well.

Parking
------------
 * New per parking lot options: comebackcontext and comebackdialtime. See